Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.0
-
0306247f5 (dev)
Description
Those functions exist as they were created by the macro, but they are not usable in Qt 6 because operator-- has been removed from QSet::iterator.
Documentation should be updated at least, and maybe another macro created for forward only iterators which does not generate these functions.
Attachments
For Gerrit Dashboard: QTBUG-113379 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
476536,3 | Remove Java iterator APIs for moving back if operator-- is not available | dev | qt/qtbase | Status: MERGED | +2 | 0 |